--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@ http://www.templatemo.com/tm-467-easy-profile
 			<div class="experience">
 				<h2 class="white">Experiences</h2>
 					<div class="experience-content">
-						<h4 class="experience-title accent">110kV KSEB Transmission substation</h4>
-						<h5>110kV KSEB Substation Thycattussery</h5><span></span>
-						<h5>2014 January - Present</h5>
-						<p class="education-description">Working as Assistant Engineer at 110kv transmission substation of KSEB(Kerala State Electricity Board.LTD).Monitored operation of 110 kVsubstation to control distribution and regulate flow in the transmission network.Assisting the station engineer in all maintenances of the 110kv Substation and routine system testing.</p>
+						<h4 class="experience-title accent">110kV Transmission substation Infopark</h4>
+						<h5>Infopark cherthala</h5><span></span>
+						<h5>2020 December - Present</h5>
+						<p class="education-description">Working as Junior Engineer at 110kV transmission substation of Infopark cherthala.Monitored operation of 110 kVsubstation to control distribution and regulate flow in the transmission network.Assisting the Electrical engineer in all maintenances of the 110kv Substation and routine system testing.</p>
 					</div>
 			</div>
 		</div>
